Visit,
https://github.com/simple-last-fm-scrobbler/sls
For more details.
https://github.com/simple-last-fm-scrobbler/sls/wiki/Privacy-Concerns
For privacy concerns.

- 1.6.8 (2019-9-15) codename: kingus
  * Correction Rules database problem fixed

- 1.6.7 (2019-9-15) codename: jingus
  * Fixed non-foreground service crash Bug
  * Show user permissions each update
  * Option Active App Notification status changes after track switch

- 1.6.6 (2019-9-14) codename: ingus
  * Better Service Management
  * Listener warning notification for Android 8.0+
  * Improve Exit Button
  * Fixed occasional blank music notification

- 1.6.5 (2019-9-13) codename: hingus
  * Better Service Management
  * Update Permissions UI
  * Fixed Notification Priority

- 1.6.4 (2019-9-10) codename: gingus
  * UI ListenBrainz Login Bug
  * Changelog 2019

- 1.6.3 (2019-9-9) codename: fingus
  * UI fixes
  * Added not logged in warning
  * Added database management

- 1.6.2 (2019-9-8) codename: engus
  * Fixed music not being recognized immediately
  * Skip permissions optionally
  * Language selection

- 1.6.1 (2019-9-7) codename: dingus
  * Fixed icon kitkat

- 1.6.0 (2019-9-7) codename: cingus
  * Fixed Google Play logo block flag

- 1.5.9 (2019-9-7) codename: bingus
  * Fixed Google Play 'Last.fm' word block flag

- 1.5.8 (2019-6-24) codename: angus
  * Permission Changes
  * Notification Priority
  * App Detected Notification
  * Export db
  * Dropped support for Gingerbread
  * Themes
  * Many Apps Supported (API 21+) Lollipop
  * Notification Listener
  * Fixes (thanks to G00fY2)
  * Features (thanks to 4-Eyes)
  * Bugs & Languages fixes thanks to many

- 1.5.7 (2018-1-8)
  * Fix scrobbles on Android 8 and higher (thanks to G00fY2)
  * Switch to SDK 25 to allow receiving implicit broadcasts
  * Add back Android 2.3 Support

- 1.5.6 (2017-9-17)
  * Update from Android 24 SDK to 26 (Android 8)

- 1.5.5 (2017-9-16)
  * ListenBrainz fix (thanks to @19379)