@@ -6,6 +6,8 @@ For privacy concerns.
 
 - 1.6.8 (2019-9-15) codename: kingus
   * Correction Rules database problem fixed
+  * Back button in permissions fixed
+  * Privacy information in permissions
 
 - 1.6.7 (2019-9-15) codename: jingus
   * Fixed non-foreground service crash Bug
